--- a/Frontend/public/assets/css/core.css
+++ b/Frontend/public/assets/css/core.css
@@ -20,6 +20,19 @@ html[data-i18n="ready"] body {
     -webkit-font-smoothing: antialiased;
 }
 
+/* --- UTILITIES --- */
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+}
+
 html {
     scrollbar-gutter: stable;
 }
